library service, messaging...

--- a/dotnet-solution/ScipaperIO/LibraryService/appsettings.Development.json
+++ b/dotnet-solution/ScipaperIO/LibraryService/appsettings.Development.json
@@ -1,8 +1,29 @@
 {
+  "$schema": "https://steeltoe.io/schema/latest/schema.json",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "scipaper-io"
+  },
+
+  "Eureka": {
+    "Instance": {
+      "AppName": "library-service",
+      "port": "50002",
+      "ipAddress": "localhost",
+      "preferIpAddress": true
+    },
+    "Client": {
+      "EurekaServerServiceUrls": "http://localhost:9091/eureka",
+      "ShouldRegisterWithEureka": true
     }
   }
 }
