--- a/dotnet-solution/ScipaperIO/LibraryService/LibraryService.csproj
+++ b/dotnet-solution/ScipaperIO/LibraryService/LibraryService.csproj
@@ -6,11 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="kafka-sharp" Version="1.4.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.21.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.16.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.16.1" />
-    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
     <PackageReference Include="Steeltoe.Common.Hosting" Version="3.2.0" />
     <PackageReference Include="Steeltoe.Discovery.ClientCore" Version="3.2.0" />
     <PackageReference Include="Steeltoe.Discovery.Eureka" Version="3.0.0" />
@@ -20,15 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
-    <Folder Include="Exceptions\" />
-    <Folder Include="Filters\" />
     <Folder Include="DTO\" />
-    <Folder Include="Middleware\" />
-    <Folder Include="Settings\" />
-    <Folder Include="Services\" />
-    <Folder Include="Repository\" />
   </ItemGroup>
 
 </Project>
