--- a/dotnet-solution/ScipaperIO/UserService/Properties/launchSettings.json
+++ b/dotnet-solution/ScipaperIO/UserService/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -19,13 +19,13 @@
     },
     "UserService": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:9092",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:50000",
+      "dotnetRunMessages": "true"
     }
   }
 }
