--- a/dotnet-solution/ScipaperIO/UserService/UserService.csproj
+++ b/dotnet-solution/ScipaperIO/UserService/UserService.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Confluent.Kafka" Version="1.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.21.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.16.1" />
